reworking all for minimalist in program size ssd1306 graphics library

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=tft18
+name=MinimalistSSD1306
 version=1.0.0
 author=Vladimir Schneider
 maintainer=Vladimir Schneider <vladimir.schneider@gmail.com>
-sentence=KMR-18 TFT Display Library
-paragraph=KMR-18 TFT Display Library providing basic graphics in a small footprint
+sentence=SSD1306 Minimalist Display Library
+paragraph=SSD1306 Minimalist Display Library providing basic graphics in a tiny footprint
 category=Display
 url=
 architectures=*
