--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=MinimalistSSD1306
+name=SSD1306
 version=1.0.0
 author=Vladimir Schneider
 maintainer=Vladimir Schneider <vladimir.schneider@gmail.com>
 sentence=SSD1306 Minimalist Display Library
-paragraph=SSD1306 Minimalist Display Library providing basic graphics in a tiny footprint
+paragraph=SSD1306 Minimalist Display Library for ATMega328p providing basic graphics in a tiny footprint
 category=Display
 url=
-architectures=*
+architectures=avr
