remove src dir. Does not work with Arduino-CMake.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,11 @@
-name=SSD1306
+name=SSD1306 GFX
 version=1.0.0
 author=Vladimir Schneider
 maintainer=Vladimir Schneider <vladimir.schneider@gmail.com>
-sentence=SSD1306 Minimalist Display Library
+sentence=SSD1306 Minimalist Display Library for ATMega328p
 paragraph=SSD1306 Minimalist Display Library for ATMega328p providing basic graphics in a tiny footprint
 category=Display
-url=
+url=https://github.com/vsch/ssd1306_gfx
 architectures=avr
+includes=ssd1306_gfx.h Ssd1306Display.h
+depends=Scheduler
