restore src/. Fixed in Arduino.cmake, shared cmake settings. Use common Toolchain

--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=SSD1306 Minimalist Display Library for ATMega328p providing basic grap
 category=Display
 url=https://github.com/vsch/ssd1306_gfx
 architectures=avr
-includes=ssd1306_gfx.h Ssd1306Display.h
+includes=ssd1306_gfx.h, Ssd1306Display.h
 depends=Scheduler
